--- a/CommerceProject/CommerceProject/Pages/Home.razor
+++ b/CommerceProject/CommerceProject/Pages/Home.razor
@@ -3,6 +3,7 @@
 
 @using CommerceProject.Data
 @inject WeatherForecastService ForecastService
+@inject GetTransactionData TransactionData
 
 @if (forecasts == null)
 {
@@ -64,61 +65,21 @@
                         <thead>
                             <tr>
                                 <th>Date</th>
-                                <th>Temp. (C)</th>
-                                <th>Temp. (F)</th>
-                                <th>Summary</th>
+                                <th>Location</th>
+                                <th>Amount</th>
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var forecast in forecasts)
+                            @foreach (var transaction in transaction_list)
 
                             {
-                                <tr data-toggle="collapse" data-target=".@(forecast.Summary)">
-                                    <td>@forecast.Date.ToShortDateString()</td>
-                                    <td>@forecast.TemperatureC</td>
-                                    <td>@forecast.TemperatureF</td>
-                                    <td>@forecast.Summary</td>
+                                <tr data-toggle="collapse" data-target=".@(transaction.getLocation())">
+                                    <td>@transaction.getDate()</td>
+                                    <td>@transaction.getLocation()</td>
+                                    <td>@transaction.get_Amount()</td>
+                                    
                                 </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo1</div>
-                                    </td>
-                                </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo2</div>
-                                    </td>
-                                </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo3</div>
-                                    </td>
-                                </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo4</div>
-                                    </td>
-                                </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo5</div>
-                                    </td>
-                                </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo1</div>
-                                    </td>
-                                </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo1</div>
-                                    </td>
-                                </tr>
-                                <tr class="tableRowHoverOff noBorder">
-                                    <td class="hiddenRow ">
-                                        <div class="collapse  @(forecast.Summary)">Demo1</div>
-                                    </td>
-                                </tr>
+                               
 
                             }
                         </tbody>
@@ -158,9 +119,11 @@
 
     @code {
         private WeatherForecast[] forecasts;
+        List<Transaction> transaction_list = new List<Transaction>();
 
         protected override async Task OnInitializedAsync()
         {
             forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+            transaction_list = TransactionData.GetTransactions().ToList();
         }
     }
