update TransactionData.cs and addTrans.razor
update sql string.
update string literal for .getTransactions()

--- a/CommerceProject/CommerceProject/Pages/AddTrans.razor
+++ b/CommerceProject/CommerceProject/Pages/AddTrans.razor
@@ -51,7 +51,7 @@ else
 
         people = await _db.GetPeople();
 
-        trans = await _trans.GetTransactions();
+        trans = await _trans.GetTransactions("CR");
 
     }
 
