--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor
@@ -22,8 +22,10 @@
         </div>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+            <form method="post" action="Identity/Account/LogOut">
+                <button type="submit" class="nav-link btn btn-link">Sign out</button>
+            </form>
 
-            <button type="button" class="btn btn-primary">Sign out</button>
         </div>
 
 
