Rough reset login working

--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -50,7 +50,9 @@
             <p>&nbsp;</p>
         </div>
     </div>
+</div>
 
-    @section Scripts {
-        <partial name="_ValidationScriptsPartial" />
-    }
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
