--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,36 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Reset link set";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
 
+<div class="col-12 card">
+    <div class="col-12 row">
+        <p>&nbsp;</p>
+    </div>
+    <div class="col-12 row">
+        <div class="col-md-8">
+            <center>
+                <img src="/css/images/commerce-bank-vector-logo-large.png" width="90%" />
+            </center>
+        </div>
+        <div class="col-md-4">
+            <section>
+                <form method="post">
+                    <h2>@ViewData["Title"]</h2>
+                    <h5 style="font-weight:bold; color:darkgreen">Please check your email to reset your password.</h5>
+                    <hr />
+                    <div class="form-group">
+                        <p>
+                            <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Back to login</a>
+                        </p>
+                    </div>
+                </form>
+            </section>
+        </div>
+        <div class="col-4 row">
+            <p>&nbsp;</p>
+        </div>
+    </div>
+</div>
