--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -4,7 +4,33 @@
     ViewData["Title"] = "Reset password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+
+<div class="col-12 card">
+    <div class="col-12 row">
+        <p>&nbsp;</p>
+    </div>
+    <div class="col-12 row">
+        <div class="col-md-8">
+            <center>
+                <img src="/css/images/commerce-bank-vector-logo-large.png" width="90%" />
+            </center>
+        </div>
+        <div class="col-md-4">
+            <section>
+                <form method="post">
+                    <h2>@ViewData["Title"]</h2>
+                    <h5 style="font-weight:bold; color:darkgreen">Your password has been reset.</h5>
+                    <hr />
+                    <div class="form-group">
+                        <p>
+                            <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Back to login</a>
+                        </p>
+                    </div>
+                </form>
+            </section>
+        </div>
+        <div class="col-4 row">
+            <p>&nbsp;</p>
+        </div>
+    </div>
+</div>
