Fixed fonts on login/register/password pages

--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,6 +4,15 @@
     ViewData["Title"] = "Register";
 }
 
+<style>
+    h1, h5 {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+        font-family: 'Open Sans', sans-serif;
+    }
+</style>
 
 <div class="col-12 card">
     <div class="col-12 row">
