--- a/CommerceProject/CommerceProject/Pages/Shared/_Layout.cshtml
+++ b/CommerceProject/CommerceProject/Pages/Shared/_Layout.cshtml
@@ -10,8 +10,10 @@
     <title>@ViewData["Title"] - CommerceProject</title>
     <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Identity/css/site.css" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <div class="container" style="padding-top:20px;">
         <main role="main" class="pb-3">
             @RenderBody()
