--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,6 +2,17 @@
 @model LoginModel
 @inject SignInManager<IdentityUser> SignInManager
 
+
+<style>
+    h1, h4 {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+        font-family: 'Open Sans', sans-serif;
+    }
+</style>
+
 @{
     ViewData["Title"] = "Log in";
 }
@@ -43,7 +54,7 @@ else
                             <button type="submit" class="btn btn-primary">Log in</button>
                         </div>
                         <div class="form-group">
-                                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                             <p>
                                 <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                             </p>
@@ -65,3 +76,4 @@ else
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
