--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -5,6 +5,16 @@
 }
 
 
+<style>
+    h2, h5 {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+        font-family: 'Open Sans', sans-serif;
+    }
+</style>
+
 <div class="col-12 card">
     <div class="col-12 row">
         <p>&nbsp;</p>
