VS layout update

--- a/CommerceProject/CommerceProject/Pages/AddTrans.razor
+++ b/CommerceProject/CommerceProject/Pages/AddTrans.razor
@@ -55,7 +55,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        UserName = httpContextAccessor.HttpContext.User.Identity.Name;
+        UserName = httpContextAccessor.HttpContext.User.Identity.Name; // gets current user's email
 
         people = await _db.GetPeople();
 
