fix /addTrans page
update connection string for SqlDataAccess.cs

--- a/CommerceProject/CommerceProject/Pages/AddTrans.razor
+++ b/CommerceProject/CommerceProject/Pages/AddTrans.razor
@@ -57,7 +57,7 @@ else
     {
         UserName = httpContextAccessor.HttpContext.User.Identity.Name; // gets current user's email
 
-        people = await _db.GetPeople();
+        //people = await _db.GetPeople();
 
         trans = await _trans.GetTransactions(UserName);
 
