--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor
@@ -10,19 +10,23 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Settings</a>
+                    <a class="nav-link" href="/settings">Settings</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-bell"></i> <span class="badge rounded-pill badge-notification bg-danger">99</span></a>
                 </li>
             </ul>
 
-          
+            <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+                <form method="post" action="Identity/Account/LogOut">
+                    <button type="submit" class="nav-link btn btn-link">Sign out</button>
+                </form>
 
-            <button type="button" class="btn btn-primary ml-3">Sign out</button>
+            </div>
+
         </div>
 
 
